<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EnterData"
    android:layoutDirection="ltr"
    android:id="@+id/parent"
>
    <TextView
        android:fontFamily="@font/internet_bold"
        android:id="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:text="@string/enter_data_title"
        android:textSize="@dimen/size7"></TextView>
   <LinearLayout
       android:paddingHorizontal="10dp"
       android:id="@+id/layout1"
       android:layout_marginTop="40dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/title"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:orientation="horizontal">
       <TextView
           android:fontFamily="@font/internet_regular"
           android:textColor="@color/gray"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/DMU_number"
           android:textSize="@dimen/size5"
           android:textStyle="italic">
       </TextView>

       <EditText
           android:maxLines="1"
           android:id="@+id/dmu_number"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="2dp"
           android:fontFamily="@font/internet_regular"
           android:inputType="number"
           android:minWidth="50dp"
           android:textSize="@dimen/size5"></EditText>
   </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:id="@+id/layout2"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <LinearLayout
            android:paddingRight="5dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:fontFamily="@font/internet_regular"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_number"
            android:textSize="@dimen/size3"
            android:textStyle="italic"></TextView>
        <EditText
            android:maxLines="1"
            android:inputType="number"
            android:fontFamily="@font/internet_regular"
            android:textSize="@dimen/size3"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:minWidth="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/input_number"></EditText>
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:fontFamily="@font/internet_regular"
                android:textColor="@color/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_number"
                android:textSize="@dimen/size3"
                android:textStyle="italic"></TextView>
            <EditText
                android:maxLines="1"
                android:inputType="number"
                android:fontFamily="@font/internet_regular"
                android:textSize="@dimen/size3"
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:minWidth="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/output_number"></EditText>
        </LinearLayout>
    </LinearLayout>
   <RelativeLayout
        android:paddingVertical="10dp"
        android:id="@+id/submit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">
        <Button
            android:id="@+id/submit_btn"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"></Button>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>